Untitled Folder/admin1/workspace/New Project/src/objects/Position__c.object
<CustomObject>
    <description>This object stores information about
the open job positions at our company.</description>
    <fields>
        <fullName>Age_Calculation__c</fullName>
        <formula>IF((FLOOR((TODAY() - Date_of_Birth_del__c  ) / 365.2425))=0,
 &quot; &quot;, 
 IF((FLOOR((TODAY() -  Date_of_Birth_del__c ) / 365.2425))=1, 
 text(FLOOR((TODAY() -  Date_of_Birth_del__c ) / 365.2425))&amp;&quot;year&quot;, 
 text(FLOOR((TODAY() -  Date_of_Birth_del__c ) / 365.2425))&amp;&quot;years&quot;))
&amp;
IF((FLOOR(MOD((TODAY()- Date_of_Birth_del__c ),365.2425)/30))=0,
 &quot; &quot;, 
 IF((FLOOR(MOD((TODAY()- Date_of_Birth_del__c ),365.2425)/30))=1, 
 text(FLOOR(MOD((TODAY()- Date_of_Birth_del__c ),365.2425)/30))&amp;&quot;month&quot;, 
 text(FLOOR(MOD((TODAY()- Date_of_Birth_del__c ),365.2425)/30))&amp;&quot;months&quot;) )
&amp;
IF((FLOOR(mod(MOD((TODAY()- Date_of_Birth_del__c ),365.25),30)/7))=0,
 &quot; &quot;, 
 IF((FLOOR(mod(MOD((TODAY()- Date_of_Birth_del__c),365.25),30)/7))=1, 
 text(FLOOR(mod(MOD((TODAY()- Date_of_Birth_del__c),365.25),30)/7))&amp;&quot;week&quot;, 
 text(FLOOR(mod(MOD((TODAY()- Date_of_Birth_del__c ),365.25),30)/7))&amp;&quot;weeks&quot;) )
&amp;
IF((FLOOR(mod(mod(MOD((TODAY()-Date_of_Birth_del__c ),365.2425),30.44),7)))=0,
 &quot; &quot;, 
 IF((FLOOR(mod(mod(MOD((TODAY()- Date_of_Birth_del__c),365.2425),30.44),7)))=1, 
 text(FLOOR(mod(mod(MOD((TODAY()- Date_of_Birth_del__c),365.2425),30.44),7)))&amp;&quot;day&quot;, 
 text(FLOOR(mod(mod(MOD((TODAY()- Date_of_Birth_del__c ),365.2425),30.44),7)))&amp;&quot;days&quot;) )</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Here are some easy ones. The Position object requires a few checkbox fields: one to indicate if travel is
required for the position</description>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>our Recruiting app to track the date
a position on which  the date it closes.</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_del__c</fullName>
        <description>Enter the date of birth in the format yy/mm/dd</description>
        <inlineHelpText>Please enter the date of birth.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>The number of days a position has
been (or was) open.</description>
        <formula>IF( ISBLANK( Close_Date__c ) ,
           TODAY( ) -  Open_Date__c ,
           Close_Date__c  -  Open_Date__c )</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational__c</fullName>
        <description>High-level description of
the job and its duties.</description>
        <label>Educational Requirements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Picklist Functional Area</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY()  + 90</defaultValue>
        <description>our Recruiting app to track the date
a position on which  date it closes,</description>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Here are some easy ones. The Position object requires a few checkbox fields: one to indicate if travel is
required for the position,</description>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Here are some easy ones. The Position object requires a few checkbox fields: one to indicate if travel is
required for the position</description>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>High-level description of
the job and its duties.</description>
        <label>Job Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FN-100</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>FN-200</fullName>
                </value>
                <value>
                    <fullName>FN-300</fullName>
                </value>
                <value>
                    <fullName>FN-400</fullName>
                </value>
                <value>
                    <fullName>HR-100</fullName>
                </value>
                <value>
                    <fullName>HR-200</fullName>
                </value>
                <value>
                    <fullName>HR-300</fullName>
                </value>
                <value>
                    <fullName>HR-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>RO-100</fullName>
                </value>
                <value>
                    <fullName>RO-200</fullName>
                </value>
                <value>
                    <fullName>RO-300</fullName>
                </value>
                <value>
                    <fullName>RO-400</fullName>
                </value>
                <value>
                    <fullName>WH-100</fullName>
                </value>
                <value>
                    <fullName>WH-200</fullName>
                </value>
                <value>
                    <fullName>WH-300</fullName>
                </value>
                <value>
                    <fullName>WH-400</fullName>
                </value>
                <value>
                    <fullName>MC-100</fullName>
                </value>
                <value>
                    <fullName>MC-200</fullName>
                </value>
                <value>
                    <fullName>MC-300</fullName>
                </value>
                <value>
                    <fullName>MC-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Let&apos;s walk through the creation of the Location picklist field.</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>• San Francisco, CA</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>• Austin, TX</fullName>
                </value>
                <value>
                    <fullName>• Boulder, CO</fullName>
                </value>
                <value>
                    <fullName>• London, England</fullName>
                </value>
                <value>
                    <fullName>• New York, NY</fullName>
                </value>
                <value>
                    <fullName>• Mumbai, India</fullName>
                </value>
                <value>
                    <fullName>• Sydney, Australia</fullName>
                </value>
                <value>
                    <fullName>• Tokyo, Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <description>Defining a currency field is almost identical to defining a text field, with a few slight differences.</description>
        <label>Max Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <description>Defining a currency field is almost identical to defining a text field, with a few slight differences.</description>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Please enter mobile number.</description>
        <inlineHelpText>Please enter mobile number with country code</inlineHelpText>
        <label>Mobile</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>our Recruiting app to track the date
a position opens.</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>High-level description of
the job and its duties.</description>
        <label>Responsibilities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <description>High-level description of
the job and its duties.</description>
        <label>Skills Required</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Picklist Status</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Here are some easy ones. The Position object requires a few checkbox fields: one to indicate if travel is
required for the position.</description>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Picklist_To_Text__c</fullName>
        <label>Trial Picklist To Text</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Of_Brith_rule</fullName>
        <active>true</active>
        <description>Date of Birth cannot be more than Today&apos;s Date.Please enter the correct details.</description>
        <errorConditionFormula>Date_of_Birth_del__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_Birth_del__c</errorDisplayField>
        <errorMessage>Date of Birth cannot be more than Today&apos;s Date.Please enter the correct details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Please Enter Min Pay  which should never exceed Max Pay.</description>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>enter Min Pay cannot exceed Max Pay</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Number_validation</fullName>
        <active>false</active>
        <description>It should not be more than 10 digits.</description>
        <errorConditionFormula>(LEN(Mobile__c ) &gt; 10)</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>It should not be more than 10 digits.</errorMessage>
    </validationRules>
</CustomObject>